[package]
name = "server"
version = "0.1.0"
authors = ["Borja Lorente <blorente.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.13.3"
tokio = { version =  "0.2", features = ["full"] }
starlark = "0.3.1"
codemap = "0.1.1"
rustpython-parser = "0.1.2"
maplit = "1.0.2"
trim-margin = "0.1.0"
tempfile = "3.2.0"
eyre = "0.6.8"
